--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,20 @@
+HTML{
+  background-color: lavender;
+}
 .App {
   text-align: center;
-  
+}
+
+.app h1{
+  font-weight: 25px;
+  color: #001e4d;
+  font-weight: 600;
+  border-bottom: 1px solid #333;
+  padding-bottom: 30px;
+}
+
+.quiz {
+  padding: 20px 0;
 }
 
 .welcomeRaccoon {
@@ -28,5 +42,9 @@
   display: inline-block;
   font-size: 56px;
   letter-spacing: 3px;
+  
+}
+
+.quizBox {
   
 }
