--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,6 @@ HTML{
   text-align: center;
 }
 
-.app h1{
-  font-weight: 25px;
-  color: #001e4d;
-  font-weight: 600;
-  border-bottom: 1px solid #333;
-  padding-bottom: 30px;
-}
-
 .quiz {
   padding: 20px 0;
 }
@@ -45,6 +37,7 @@ HTML{
   
 } */
 
-.quizBox {
-  
+.quizBox ul .selectedAnswer {
+  background: #ffd6ff;
+  border: 1px solid #800080;
 }
